--- a/views/public/index.html
+++ b/views/public/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>develop-training-11</title>
+  <link rel="stylesheet" href="/views/public/css/index.css">
+  <script src="/views/index.js" defer></script>
 </head>
 <body>
   <div id="root"></div>
