--- a/views/public/index.html
+++ b/views/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>develop-training-11</title>
   <link rel="stylesheet" href="/views/public/css/index.css">
-  <script src="/views/index.js" defer></script>
+  <script src="../index.js" defer></script>
 </head>
 <body>
   <div id="root"></div>
