서빙 확인하면서 진행한, 경로 수정

--- a/views/public/index.html
+++ b/views/public/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>develop-training-11</title>
   <link rel="stylesheet" href="/views/public/css/index.css">
-  <script src="../index.js" defer></script>
+  <script src="/views/index.js" defer></script>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">test</div>
 </body>
 </html>
